# qtype

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_all.sh  build_qtype_win_in_wsl.sh  input.txt  main.cpp  qtype.pro  qtype_win.cpp  test_idle  typing_engine.h
binary/: README.md  qtype-linux-x64  qtype-macos-x64  qtype_client-linux-x64  qtype_client-macos-x64  qtype_server-linux-x64  qtype_server-macos-x64
tests/: tests.cpp
websocket/: .gitignore  BUILD_CLIENT.md  BUILD_WINDOWS.md  CMakeLists.txt  PORTING_SUMMARY.md  QUICKSTART.md  README.txt  qtype_client.cpp  qtype_server.cpp  setup_wsl_display.sh
websocket/build_server/: Makefile  compile_commands.json
